--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-name: pni
-channels:
-  - defaults
-dependencies:
-  - python=3.10
-  - ipykernel
-  - matplotlib
-prefix: /home/astanea/anaconda3/envs/pni
+backports.functools-lru-cache==1.6.5
+ipykernel==6.25.2
+matplotlib==3.7.2
+mkl-fft==1.3.8
+mkl-random==1.2.4
+munkres==1.1.4
+nose2==0.13.0
+opencv-python==4.8.1.78
+pandas==2.1.1
+pip-chill==1.0.3
+pyqt5-sip==12.11.0
+sip==6.6.2
+typing-extensions==4.8.0
