fix python package requirements to run with suggested venv options

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-backports.functools-lru-cache==1.6.5
-ipykernel==6.25.2
-matplotlib==3.7.2
-mkl-fft==1.3.8
-mkl-random==1.2.4
-munkres==1.1.4
-nose2==0.13.0
-opencv-python==4.8.1.78
-pandas==2.1.1
-pip-chill==1.0.3
-pyqt5-sip==12.11.0
-sip==6.6.2
-typing-extensions==4.8.0
+backports.functools-lru-cache>=1.6.5
+ipykernel>=6.25.2
+matplotlib>=3.7.2
+mkl-fft>=1.3.6
+mkl-random>=1.2.2
+munkres>=1.1.4
+nose2>=0.13.0
+opencv-python>=4.8.1.78
+pandas>=2.1.1
+pip-chill>=1.0.3
+pyqt5-sip>=12.11.0
+sip>=6.6.2
+typing-extensions>=4.8.0
